Squashable commit; interim checkin
Signed-off-by: Laird Nelson <ljnelson@gmail.com>