@@ -10,8 +10,8 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
 
-  <name>microBean™ Lang</name>
-  <description>microBean™ Lang: An implementation of the Java language model.</description>
+  <name>microBean™ Lang: Core</name>
+  <description>microBean™ Lang: Core: An implementation of the Java language model.</description>
 
   <dependencies>
 
@@ -45,37 +45,27 @@
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
-          <configuration>
-            <compilerArgs combine.children="append">
-              <arg>--add-exports</arg>
-              <arg>jdk.compiler/com.sun.tools.javac.code=org.microbean.lang</arg>
-              <arg>--add-exports</arg>
-              <arg>jdk.compiler/com.sun.tools.javac.model=org.microbean.lang</arg>
-            </compilerArgs>
-          </configuration>
-        </plugin>
-        <plugin>
-          <artifactId>maven-javadoc-plugin</artifactId>
-          <configuration>
-            <additionalOptions>
-              <!--
-              <additionalOption>-add-exports</additionalOption>
-              <additionalOption>jdk.compiler/com.sun.tools.javac.code=org.microbean.lang</additionalOption>
-              -->
-            </additionalOptions>
-          </configuration>
+          <executions>
+            <execution>
+              <id>default-testCompile</id>
+              <configuration>
+                <compilerArgs combine.children="append">
+                  <arg>--add-exports</arg>
+                  <arg>jdk.compiler/com.sun.tools.javac.code=org.microbean.lang</arg>
+                  <arg>--add-exports</arg>
+                  <arg>jdk.compiler/com.sun.tools.javac.model=org.microbean.lang</arg>
+                  <arg>-Xlint:-exports</arg>
+                </compilerArgs>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <configuration>
             <argLine>
-              <!--
-              -add-exports java.base/jdk.internal.vm.annotation=org.microbean.lang
-              -add-exports java.base/jdk.internal.util.random=org.microbean.lang
-              -->
               --add-exports jdk.compiler/com.sun.tools.javac.code=org.microbean.lang
               --add-opens jdk.compiler/com.sun.tools.javac.model=org.microbean.lang
-              --add-opens org.microbean.lang/org.microbean.lang=ALL-UNNAMED
               --enable-preview
             </argLine>
             <!-- See https://junit.org/junit5/docs/snapshot/user-guide/#running-tests-build-maven-config-params -->
